--- a/trunk/Teamedit/.settings/com.google.gwt.eclipse.core.prefs
+++ b/trunk/Teamedit/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Wed Jun 01 04:33:14 VET 2011
+#Wed Jun 01 11:54:25 VET 2011
 eclipse.preferences.version=1
+entryPointModules=
 filesCopiedToWebInfLib=gwt-servlet.jar
